--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,6 +12,9 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_MOUSE=y
+
 CONFIG_ZMK_SLEEP=y
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
